--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.11.0",
     "lucide-react": "^0.344.0",
